Add redirects file

--- a/404.html
+++ b/404.html
@@ -16,9 +16,12 @@ layout: default
   }
 </style>
 
-<div class="container">
+<div>
   <h1>404</h1>
+  <br>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <div>
+    <p><strong>Page not found :(</strong></p>
+    <p>Go back to <a href="/">Home</a></p>    
+  </div>
 </div>
